# AgenticAI

./: .env  Dockerfile  README.md  app.py  auto_tweet.py  generate_blog.py  index.html  main.py  pyproject.toml  request.json  requirements.txt  result.html
